# translib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
example/: CMakeLists.txt  eventFdExample.cpp  httpExample.cpp  index.h  stub.cpp  tcpExample.cpp  test.cpp  timerExample.cpp  timerManagerExample.cpp
include/logger/: logger.h
include/message/: message.hpp
include/ringbuffer/: buffer_message.hpp  ringbuffer.hpp
include/translib/: define.h  eventClient.h  eventServer.h  frameLoop.h  httpRequest.h  httpServer.h  loop.h  tcpClient.h  tcpClientAPP.h  tcpClientTPKT.h  tcpServer.h  tcpServerApp.h  tcpServerDispatcher.h  tcpServerTPKT.h  tcpServerTPKTv3.h  tcpSession.h  tcpSessionFactory.h  tcpSocket.h  timer.h  timerManager.h
include/translib/example/: index.h
src/: CMakeLists.txt  frameLoop.cpp  httpRequest.cpp  httpServer.cpp  loop.cpp  tcpClient.cpp  tcpServer.cpp  tcpServerDispatcher.cpp  tcpSession.cpp  tcpSocket.cpp  timer.cpp  timerManager.cpp
src/logger/: logger.cpp
src/translib/: frameLoop.cpp  httpRequest.cpp  httpServer.cpp  loop.cpp  tcpServerDispatcher.cpp  timer.cpp  timerManager.cpp
test/: CMakeLists.txt  example.cpp
test/eventFdTest/: eventFdTest.hpp
test/eventFdTest/testBody/: testCasesBody.hpp
test/eventFdTest/testCases/: case_pool.hpp
test/eventFdTest/testEnv/: testEnv.hpp
test/include/: NonCopyable.hpp  singleton.hpp  suit_pool.hpp  testCases.hpp  testInclude.hpp  testProject.hpp  testSuit.hpp  testUtil.hpp
test/timerManagerTest/: timerManagerTest.hpp
test/timerManagerTest/testBody/: testCasesBody.hpp
test/timerManagerTest/testCases/: case_pool.hpp
test/timerManagerTest/testEnv/: testEnv.hpp
